# hive_metastore_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: hms.rs  lib.rs
src/hms/: const_BUCKET_COUNT.rs  const_BUCKET_FIELD_NAME.rs  const_DDL_TIME.rs  const_EXPECTED_PARAMETER_KEY.rs  const_EXPECTED_PARAMETER_VALUE.rs  const_FIELD_TO_DIMENSION.rs  const_FILE_INPUT_FORMAT.rs  const_FILE_OUTPUT_FORMAT.rs  const_HIVE_FILTER_FIELD_LAST_ACCESS.rs  const_HIVE_FILTER_FIELD_OWNER.rs  const_HIVE_FILTER_FIELD_PARAMS.rs  const_IS_ARCHIVED.rs  const_IS_IMMUTABLE.rs  const_META_TABLE_COLUMNS.rs  const_META_TABLE_COLUMN_TYPES.rs  const_META_TABLE_DB.rs  const_META_TABLE_LOCATION.rs  const_META_TABLE_NAME.rs  const_META_TABLE_PARTITION_COLUMNS.rs  const_META_TABLE_PARTITION_COLUMN_TYPES.rs  const_META_TABLE_SERDE.rs  const_META_TABLE_STORAGE.rs  const_ORIGINAL_LOCATION.rs  const_TABLE_IS_TRANSACTIONAL.rs  const_TABLE_NO_AUTO_COMPACT.rs  const_TABLE_TRANSACTIONAL_PROPERTIES.rs  enum_ClientCapability.rs  enum_ColumnStatisticsData.rs  enum_CompactionType.rs  enum_DataOperationType.rs  enum_FileMetadataExprType.rs  enum_FireEventRequestData.rs  enum_FunctionType.rs  enum_GrantRevokeType.rs  enum_HiveObjectType.rs  enum_LockLevel.rs  enum_LockState.rs  enum_LockType.rs  enum_PartitionEventType.rs  enum_PrincipalType.rs  (+886 more)
src/hms/ThriftHiveMetastore/: enum_ThriftHiveMetastoreRequestRecv.rs  enum_ThriftHiveMetastoreRequestSend.rs  enum_ThriftHiveMetastoreResponseRecv.rs  mod.rs  (+3 more)
thrift_build/: Cargo.toml
thrift_build/src/: main.rs
thrift_idl/: hms.thrift
