[package]
authors = ["Xuanwo <github@xuanwo.io>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/hive_metastore"
repository = "https://github.com/Xuanwo/hive_metastore_rs"
edition = "2021"
license = "Apache-2.0"
name = "hive_metastore"
version = "0.0.1"

[workspace]
members = [
    ".",
    "thrift_build",
]

[dependencies]
pilota = "0.9"
volo = "0.8"
volo-thrift = "0.8"
anyhow = "1"
