[package]
authors = ["Xuanwo <github@xuanwo.io>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/hive_metastore"
repository = "https://github.com/Xuanwo/hive_metastore_rs"
edition = "2021"
license = "Apache-2.0"
name = "hive_metastore"
version = "0.0.2"
rust-version = "1.75"

[workspace]
members = [".", "thrift_build"]

[dependencies]
pilota = "0.10"
volo = "0.10"
volo-thrift = "0.9"
anyhow = "1"
