[package]
authors = ["Xuanwo <github@xuanwo.io>>"]
categories = ["command-line-utilities"]
description = "Native hive metastore client for Rust, powered by Volo"
documentation = "https://docs.rs/hive_metastore"
repository = "https://github.com/Xuanwo/hive_metastore_rs"
edition = "2024"
license = "Apache-2.0"
name = "hive_metastore"
version = "0.2.0"
rust-version = "1.85"

[workspace]
members = [".", "thrift_build"]

[dependencies]
pilota = "0.12.1"
volo = "0.10.6"
volo-thrift = "0.10.8"
anyhow = "1"
